--- a/index.html
+++ b/index.html
@@ -304,6 +304,6 @@
         </ul>
     </footer>
 </body>
-<script src="/js/script.js"></script>
+<script src="/js/script.js" type="text/javascript"></script>
 
 </html>
